--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "projects": [
+  "builds": [
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
@@ -10,6 +10,16 @@
     {
       "src": "backend/package.json",
       "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "frontend/dist/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/$1"
     }
   ]
 }
